web/sass/base.scss
@import url('https://fonts.googleapis.com/css2?family=Recursive&family=Lato&family=Fira+Mono&display=swap');

$radius: 4px;

html, body {
    margin: 0;
    width: 100%;
    height: 100%;
}

body {
    padding: 0;
    box-sizing: border-box;
    font-family: 'Lato', sans-serif;
    display: flex;
    flex-direction: column;
    color: var(--color-text-primary);
    background-color: var(--color-background);

    --color-background: white;
    --color-primary: #97574c;
    --color-text-primary: #111;
    --color-text-inverse: white;
    --color-not-intense: #ddd;
    --color-button-hover: #bbb;
    --color-button-active: #b0b0b0;
    --color-button-big: #d0d0d0;
    --color-button-text: #333;
    --color-input-underline: #bbb;
    --color-input-active: var(--color-primary);
    --color-selected: #555;
    --color-good: #009c46;
    --color-bad: #e24b4b;
    --color-note: #777;
    --color-panel-border: #af9b97aa;
    --color-header: white;
    --color-separator: #ccc;

    --weight-thick: bold;
    --shadow-panel: 0 0 8px 2px #0000;
    --shadow-text: none;

    &.dark-mode {
        --color-background: #1a1717;
        --color-primary: #ffb77c;
        --color-text-primary: white;
        --color-text-inverse: black;
        --color-not-intense: #443c36;
        --color-button-hover: #4b3d39;
        --color-button-active: #493631;
        --color-button-big: #524c49;
        --color-button-text: #ccc;
        --color-input-underline: #6b534e;
        --color-selected: #ccc;
        --color-good: #62ffa9;
        --color-bad: #ff7676;
        --color-note: #aaa;
        --color-panel-border: #72534aaa;
        --color-header: #2e2926;
        --color-separator: #614f4a;
    
        --weight-thick: 500;
        --shadow-panel: 0 0 12px 6px #0006;
        --shadow-text: 0 0 10px #000a;
    }

    &:not(.logged-in) {
        .acc {
            display: none;
        }
    }
}

a {
    color: var(--color-button-text);
    text-decoration: underline;
    cursor: pointer;

    &:hover {
        color: var(--color-text-primary);
    }
    &:active {
        color: var(--color-note);
    }
}

b {
    font-weight: var(--weight-thick);
}

p {
    margin: 0;
    color: var(--color-note);
    word-wrap: break-word;
    white-space: normal;
    max-width: fit-content;
}

%heading {
    font-family: inherit;
    margin: 0;
    font-weight: var(--weight-thick);
}

h1 {
    @extend %heading;
    font-family: 'Recursive', serif;
    font-weight: normal;
    color: var(--color-primary);
}
h2 {
    @extend %heading;
}
h3 {
    @extend %heading;
    margin-top: 8px;
}

%clickable {
    outline: none;
    border: none;
    border-radius: $radius;
    background-color: transparent;
    color: var(--color-button-text);
    padding: 8px 12px;
    transition-duration: 0.05s;
    transition-timing-function: ease-out;
    font-family: inherit;
    font-size: 16px;

    &:disabled {
        opacity: 0.5;
    }
}
%clickable:not(:disabled) {
    cursor: pointer;
}
%clickable:not(:disabled):hover, .tab %clickable:not(:disabled):focus {
    background-color: var(--color-button-hover);
    color: var(--color-text-primary);
}
%clickable:not(:disabled):active {
    background-color: var(--color-button-active);
    transition-duration: 0s;
}

button {
    @extend %clickable;
}
button.icon {
    padding: 8px;
    box-sizing: border-box;
    min-width: 36px;
    height: 36px;
    font-size: 16px;
    display: inline-flex;
    flex-direction: row-reverse;
    gap: 4px;
    align-items: center;
    justify-content: center;
}
button.big {
    @extend %responsive;
    background-color: var(--color-button-big);
    color: var(--color-text-primary);
    padding: 8px 16px;
}
button.compact {
    padding: 4px 8px;
}
button.toggle.active {
    background-color: var(--color-good) !important;
    color: var(--color-text-inverse) !important;
}

.good:not(:disabled) {
    color: var(--color-good) !important;
}
.bad:not(:disabled) {
    color: var(--color-bad) !important;
}

input {
    font-family: inherit;
    font-size: inherit;
    outline: none;
    border: none;
    border-bottom: 1px solid var(--color-input-underline);
    transition-property: border-bottom-color;
    transition-duration: 0.1s;
    margin-bottom: 1px;
    background-color: inherit;
    color: inherit;
    padding: 0 1px 3px 1px;

    &:enabled:hover {
        border-bottom: 2px solid var(--color-input-underline);
        margin-bottom: 0;
    }
    &:enabled:focus {
        border-bottom: 2px solid var(--color-input-active);
        margin-bottom: 0;
    }
    &:disabled {
        opacity: 0.5;
    }

    &[type=number] {
        width: 70px;
    }
    &[type=color], &[type=range] {
        border: none !important;
        margin: 0 !important;
        padding: 0 !important;
        width: 100%;
        cursor: pointer;
    }
    &[type=range] {
        -webkit-appearance: none;  /* Override default CSS styles */
        width: 100%; /* Full-width */
        height: 4px; /* Specified height */
        margin: 8px 0 !important;
        background: var(--color-input-underline);
        outline: none; /* Remove outline */

        &:hover {
            &::-webkit-slider-thumb {
                background: var(--color-primary);
            }
            
            &::-moz-range-thumb {
                background: var(--color-primary);
            }
        }

        &::-webkit-slider-thumb {
            -webkit-appearance: none; /* Override default look */
            appearance: none;
            width: 16px; /* Set a specific slider handle width */
            height: 16px; /* Slider handle height */
            border-radius: 50%;
            background: var(--color-button-text);
            transition-duration: 0.1s;
        }
        
        &::-moz-range-thumb {
            width: 16px; /* Set a specific slider handle width */
            height: 16px; /* Slider handle height */
            border-radius: 50%;
            background: white;
        }
    }
}

.disabled {
    pointer-events: none;
    user-select: none;
    opacity: 0.5;
}

li {
    display: flex;
    gap: 4px;
    border: 2px solid var(--color-button-active);
    border-radius: $radius;
    align-items: center;
    padding: 4px;
}

%responsive {
    transition-property: transform;
    transition-duration: 0.5s;
    transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
}
%responsive:not(:disabled):hover {
    transform: scale(0.98);
    transition-duration: 0.1s;
}
%responsive:not(:disabled):active {
    transform: scale(0.95);
}

#content {
    display: flex;
    position: relative;
    height: 100%;
}

#notifications {
    @extend %vertical;
    position: fixed;
    top: 16px;
    left: 16px;
    margin: 24px;
    gap: 10px;
}

.notification {
    display: flex;
    background-color: var(--color-not-intense);
    box-shadow: 0 0 8px #0008;
    border-radius: $radius;
    padding: 8px;
    align-items: center;
    gap: 4px;

    span {
        margin-left: 4px;
    }
}

.roster {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    flex-direction: row !important;
    gap: 8px !important;
}

%center {
    display: flex;
    align-items: center;
    justify-content: center;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
}

#overlay {
    @extend %center;
    position: fixed;
    pointer-events: none;
    z-index: 10;

    > * {
        position: fixed;
        opacity: 0;
        pointer-events: none;
        transition-duration: 0.1s;
    }
    > .show {
        opacity: 1;
        pointer-events: all;
    }
}

.edit-img {
    @extend %responsive;
    display: flex;
    position: relative;

    > div {
        @extend %center;
        position: absolute;
        background-color: #0008;
        color: white;
        font-weight: bold;
        opacity: 0;
        cursor: pointer;
        user-select: none;
        transition-duration: 0.1s;
    }
    > div:hover {
        opacity: 1;
    }

    > img {
        width: 100%;
        height: 100%;
        object-fit: contain;
    }
}

.close {
    @extend .icon;
    border-radius: 50%;
    position: absolute;
    right: 4px;
    top: 4px;
}

@mixin center-background {
    background-size: cover;
    background-origin: border-box;
    background-position: center;
    background-clip: content-box;
}

%vertical {
    display: flex;
    flex-direction: column;
}

.file-upload {
    @extend %responsive;
    @extend %clickable;
    display: inline-flex;
    padding: 6px 12px;
    cursor: pointer;
    align-self: center;

    > input {
        display: none;
    }
}

section {
    position: absolute;
    left: 0;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    pointer-events: none;
    opacity: 0;
    transition-duration: 0.5s;
    transition-property: opacity;
}
section.show {
    pointer-events: all;
    opacity: 1;
}

.invisible {
    opacity: 0;
    pointer-events: none;
}

header {
    display: flex;
    justify-content: space-between;
    padding: 10px 12px 8px 12px;
    border-bottom: 2px solid var(--color-separator);
    align-items: center;
    background-color: var(--color-header);

    > span > * {
        opacity: 1;

        &.hidden {
            @extend .invisible;
        }
    }
}

.dropdown {
    @extend %clickable;
    display: inline-block;
    position: relative;
    border-radius: $radius $radius 0 0;

    > div {
        @extend %vertical;
        gap: 12px;
        background-color: var(--color-not-intense);
        padding: 16px 20px;
        position: absolute;
        z-index: 4;
        top: 100%;
        right: 0;
        opacity: 0;
        pointer-events: none;
        cursor: default;
        transition-duration: 0.2s;
        border-radius: $radius 0 $radius $radius;
    }

    &:hover {
        background-color: var(--color-button-hover) !important;

        > div {
            opacity: 1;
            pointer-events: all;
        }
    }

    &.hidden {
        display: none;
    }
}

.with-tooltip {
    position: relative;
    display: flex;
    justify-content: center;
    
    > span {
        position: absolute;
        bottom: 100%;
        background-color: var(--color-not-intense);
        border-radius: $radius;
        padding: 6px 8px;
        pointer-events: none;
        opacity: 0;
        max-width: 180px;
        width: max-content;
        // font-weight: var(--weight-thick);
    }

    &:hover {
        > span {
            opacity: 1;
        }
    }
}

